--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -91,6 +91,7 @@
             top: 0;
             left: 0;
             content: '';
+            transition: all 0.3s ease 0s;
         }
         &:after {
             display: block;
@@ -101,6 +102,22 @@
             bottom: 0;
             left: 0;
             content: '';
+            transition: all 0.3s ease 0s;
+        }
+    }
+    &--active {
+        & span {
+            display: none;
+        }
+        & .burger-content {
+            &:before {
+                transform: rotate(45deg);
+                top: 9px;
+            }
+            &:after {
+                transform: rotate(-45deg);
+                bottom: 9px;
+            }
         }
     }
 }
@@ -125,6 +142,9 @@
     .burger {
         display: block;
         order: 1;
+        flex: 0 0 33%;
+    }
+    .burger--active {
         flex: 0 0 33%;
     }
     .header__nav {
