--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -171,26 +171,31 @@
         width: 17px;
         margin-right: 4px;
     }
-    .header__connection {
-        padding: 14px 15px;
-    }
-}
-
-@media (max-width: 550px) {
     .header__profile {
         display: none;
     }
+}
+
+@media (max-width: 490px) {
     .header__connection {
-        padding: 10px 15px;
-        font-size: 10px;
+        padding: 14px 20px;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .header__logo {
-        width: 100px;
+        width: 140px;
     }
     .header__connection {
         padding: 5px 8px;
         font-size: 9px;
+    }
+    .header__connection {
+        display: none;
+    }
+    .burger {
+        flex: 0 0 0;
+    }
+    .burger--active {
+        flex: 0 0 0;
     }
 }
