--- a/src/index.scss
+++ b/src/index.scss
@@ -1,79 +1,12 @@
 // Reset CSS
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-a {
- text-decoration: none;
-}
+@import '../src/assets/reset/reset.scss';
 // Fonts
-@font-face {
-  font-family: 'Gilroy-Light';
-  font-style: normal;
-  src: url('./assets/fonts/Gilroy-Light.ttf');
-}
-@font-face {
-  font-family: 'Gilroy-Regular';
-  font-style: normal;
-  src: url('./assets/fonts/Gilroy-Regular.ttf');
-}
-@font-face {
-  font-family: 'Gilroy-Bold';
-  font-style: normal;
-  src: url('./assets/fonts/Gilroy-Bold.ttf');
-}
-@font-face {
-  font-family: 'Gilroy-Extrabold';
-  font-style: normal;
-  src: url('./assets/fonts/Gilroy-Extrabold.ttf');
-}
-@font-face {
-  font-family: 'Gilroy-Black';
-  font-style: normal;
-  src: url('./assets/fonts/Gilroy-Black.ttf');
-}
+@import '../src/assets/fonts/fonts.scss';
 // Styles
 body {
-  font-family: 'Gilroy-Regular';
+  font-family: 'Gilroy';
+  font-weight: 400;
+  font-style: normal;
 }
 .container {
   max-width: 1400px;
