--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -2,7 +2,7 @@
     background: linear-gradient(90deg, #00C97B 0%, #00D981 96.96%);
     box-shadow: 0px 4px 4px rgba(1, 203, 124, 0.2);
     border-radius: 36px;
-    font-family: 'Gilroy-Extrabold';
+    font-weight: 800;
     display: inline-block;
     font-size: 17px;
     line-height: 18px;
