--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   font-family: 'Gilroy';
   font-weight: 400;
   font-style: normal;
+  background: #fff;
 }
 .container {
   max-width: 1400px;
