--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -297,6 +297,7 @@
             flex-direction: row;
             margin-bottom: 55px;
             justify-content: space-around;
+            flex-wrap: wrap;
         }
     }
     &-subtitle {
@@ -310,6 +311,216 @@
     &-title {
         max-width: 820px;
         margin-bottom: 20px;
+    }
+}
+
+// Steps 
+.steps {
+    margin-bottom: 50px;
+    &__cards {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 50px;
+    }
+    &-title {
+        margin-bottom: 14px;
+        max-width: 600px;
+    }
+    &-text {
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 36px;
+        color: #1F2428;
+        max-width: 750px;
+        margin-bottom: 30px;
+
+    }
+    &__card {
+        &-img {
+            margin-bottom: 16px;
+        }
+        &-title {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 24px;
+            text-transform: uppercase;
+            color: #1F2428;
+            margin-bottom: 7px;
+        }
+        &-subtitle {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 30px;
+            color: #1F2428;
+
+        }
+    }
+}
+
+// Choice
+
+.choice {
+    margin-bottom: 50px;
+    &__cards {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    &-title {
+        max-width: 830px;
+        margin-bottom: 20px;
+    }
+    &-subtitle {
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 36px;
+        color: #1F2428;
+        max-width: 600px;
+        margin-bottom: 40px;
+    }
+    &__card {
+        padding: 35px 30px 40px 37px;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 70px rgba(138, 138, 138, 0.1);
+        border-radius: 16px;
+        &-img {
+            margin-bottom: 20px;
+        }
+        &-title {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 20px;
+            color: #1F2428;
+            margin-bottom: 10px;
+        }
+        &-subtitle {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 26px;
+            color: #1F2428;
+            max-width: 363px;
+
+        }
+    }
+}
+
+// Reviews 
+.reviews {
+    margin-bottom: 50px;
+    &__cards {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &__card {
+        padding: 10px 0 10px 10px;
+        flex: 0 0 48%;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 70px rgba(138, 138, 138, 0.1);
+        border-radius: 16px;
+        margin-bottom: 30px;
+        &-img {
+            width: 240px;
+            height: 240px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-right: 40px;
+        }
+        &-title {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 20px;
+            color: #1F2428;
+            margin-bottom: 6px;
+        }
+        &-stars {
+            margin-bottom: 14px;
+        }
+        &-text {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 26px;
+            color: #1F2428;
+            margin-bottom: 67px;
+        }
+        &-date {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 24px;
+            color: #1F2428;
+            & span {
+                margin-left: 15px;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 24px;
+                color: #1F2428;
+            }
+        }
+    }
+    &-title {
+        margin-bottom: 40px;
+    }
+}
+
+// Follow 
+.follow {
+    &__container {
+        padding: 0 15px;
+        max-width: 90vw !important;
+        margin: 0 auto;
+        background: linear-gradient(79.63deg, #5B52A3 1.08%, #40B8EA 100%);
+        border-radius: 36px;
+    }
+    &__form {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 66px 0;
+        &-title {
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 40px;
+            color: #FFFFFF;
+            max-width: 480px;
+        }
+        &-line {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            position: relative;
+            flex: 0 0 30%;
+            &::after {
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 1px;
+                background: #fff;
+                bottom: -25px;
+                right: 0;
+                display: block;
+            }
+        }
+        &-input {
+            border: none;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 16px;
+            margin-left: 18px;
+            color: #fff;
+            background-color: inherit;
+            &::-webkit-input-placeholder { 
+                color: #fff;
+            }
+        }
     }
 }
 
@@ -339,6 +550,52 @@
             font-size: 25px !important;
             max-width: 600px !important;
             line-height: 33px !important;
+        }
+    }
+    .delivery__form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        &-list {
+            justify-content: center;
+            margin-bottom: 30px;
+        }
+        &-input {
+            width: 40vw;
+            font-size: 20px;
+        }
+        &-line {
+            margin-bottom: 30px;
+            &::after {
+                width: 39vw;
+            }
+        }
+    }
+}
+@media (max-width: 1350px) {
+    .choice {
+        &__cards {
+            flex-wrap: wrap;
+        }
+        &__card {
+            margin-bottom: 25px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 1270px) {
+    .steps {
+        &__cards {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        &__card {
+            width: 33vw;
+            text-align: center;
         }
     }
 }
@@ -378,6 +635,21 @@
         line-height: 30px;
        }
     }
+    .delivery__form {
+        margin: 0 auto;
+        width: 80%;
+        padding: 20px;
+        &-input {
+            width: 60vw;
+            font-size: 20px;
+        }
+        &-line {
+            margin-bottom: 25px;
+            &::after {
+                width: 65vw;
+            }
+        }
+    }
 }
 @media (max-width: 1035px) {
     .product {
@@ -403,6 +675,13 @@
     }
     .product .swiper-container {
         padding-left: 0;
+    }
+    .follow {
+        &__form-title {
+            font-size: 25px;
+            max-width: 410px;
+            line-height: 33px;
+        }
     }
 }
 
@@ -440,6 +719,108 @@
             justify-content: center;
         }
     }
+    .delivery-title {
+        font-size: 35px !important;
+        line-height: 40px !important;
+        max-width: 700px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .delivery-subtitle {
+        line-height: 25px;
+        font-size: 17px;
+        margin: 0 auto;
+        margin-bottom: 20px;
+        max-width: 80%;
+        text-align: center;
+    }
+    .steps {
+        &__container {
+            text-align: center;
+        }
+        &__cards {
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-bottom: 20px;
+        }
+        &__card {
+            width: auto;
+            text-align: center;
+        }
+        &-title {
+            text-align: center;
+            margin: 0 auto;
+            font-size: 35px !important;
+            line-height: 40px !important;
+        }
+        &-text {
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+    }
+    .choice {
+        &-title {
+            text-align: center;
+            margin: 0 auto;
+            font-size: 35px !important;
+            line-height: 40px !important;
+            margin-bottom: 20px;
+        }
+        &-subtitle {
+            margin: 0 auto;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+    }
+    .reviews {
+        &__container {
+            text-align: center;
+        }
+        &-title {
+            text-align: center;
+            margin: 0 auto;
+            font-size: 35px !important;
+            line-height: 40px !important;
+            margin-bottom: 20px;
+        }
+        &__cards {
+            text-align: start;
+            justify-content: center;
+        }
+        &__card {
+            flex: 0 0 80%;
+            margin-bottom: 15px;
+            &-img {
+                width: 200px;
+                height: 200px;
+            }
+            &-text {
+                margin-bottom: 20px;
+            }
+        }
+    }
+    .follow {
+        &__container {
+            max-width: 85vw !important;
+            text-align: center;
+        }
+        &__form {
+            flex-direction: column;
+            padding: 70px 0;
+            &-title {
+                margin-bottom: 50px;
+                max-width: 550px;
+            }
+            &-line {
+                margin-bottom: 90px;
+                padding: 0 30px;
+                &::after {
+                    bottom: -25px;
+                }
+            }
+        }
+    }
 }
 @media (max-width: 630px) {
     .product {
@@ -472,6 +853,18 @@
     .product__slider .product-prev-button {
         left: 10px;
         display: none;
+    }
+    .reviews {
+        &__card {
+            flex: 0 0 auto;
+            flex-direction: column;
+            text-align: center;
+            padding: 20px;
+            &-img {
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+        }
     }
 }
 @media (max-width: 590px) {
@@ -536,6 +929,38 @@
             line-height: 24px !important;
         }
     }
+    .delivery-title {
+        font-size: 27px !important;
+        line-height: 30px !important;
+        max-width: auto;
+    }
+    .delivery-subtitle {
+        line-height: 20px;
+        font-size: 13px;
+        max-width: 100%;
+    }
+    .steps {
+        &-title {
+            font-size: 27px !important;
+            line-height: 30px !important;
+        }
+    }
+    .choice {
+        &-title {
+            font-size: 27px !important;
+            line-height: 30px !important;
+        }
+        &-subtitle {
+            font-size: 18px;
+            line-height: 25px;
+        }
+    }
+    .reviews-title {
+        font-size: 30px !important;
+        max-width: 400px;
+        line-height: 30px !important;
+        margin-bottom: 20px;
+    }
 }
 
 @media (max-width: 410px) {
@@ -549,5 +974,21 @@
             line-height: 20px;
             max-width: 100%;
         }
+    }
+    .choice {
+        &__cards {
+            flex-wrap: wrap;
+        }
+        &__card {
+            padding: 20px;
+        }
+    }
+    .reviews__card-text {
+        max-width: 240px;
+    }
+    .follow__form-title {
+        font-size: 20px;
+        max-width: 400px;
+        line-height: 24px;
     }
 }
